<resources>
    <string name="auto_login">自动登录</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">加速狗无法识别此视频页面哦！更换其他站点或许可以播放哦^_^</string>
    <string name="VideoView_error_vip_video">"抱歉，该视频为付费视频,此站点无法观看，更换其他站点或许可以播放哦^_^"</string>
    <string name="VideoView_error_button">确定</string>
    <string name="VideoView_loading_text">页面读取中</string>
    <string name="all">全部</string>
    <string name="video_search_hint">搜索视频</string>
    <string name="search_clear">清空记录</string>
    <string name="search_record">搜索记录</string>
    <string name="visit_record">观看记录</string>
    <string name="clean">清除</string>
    <string name="more">更多</string>
    <string name="select_all">全选</string>
    <string name="search">搜索</string>
    <string name="hotword_recommend">热门推荐</string>
    <string name="search_video">搜索视频</string>
    <string name="search_none">无搜索结果</string>
    <string name="search_web">没有想要的结果？\n点击进入网页搜索</string>
    <string name="bookmark">收藏</string>
    <string name="download_name">离线视频</string>
    <string name="quick_guide">快捷导航</string>
    <string name="guide">导航</string>
    <string name="detected_tips">加速狗探测到此网页有视频。</string>
    <string name="download_file_chooser">选择下载文件夹</string>
    <string name="hint_url">请输入网址</string>
    <string name="enter">进入</string>
    <string name="disclaimer">声明</string>
    <string name="disclaimer_detial">鉴于本服务以非人工检索方式提供无线视频和账号搜索，本服务会提供与其他任何互联网网站或者资源的连接。由于同惠同益工作室无法控制这些网站或者资源内容和账号是否可供利用，同惠同益工作室不予负责；同惠同益亦对存在或源于此类网站或者资源之任何内容、广告、产品、或者其他资料不予保证或负责。因您使用或者依赖任何此类网站或者资源发布者或经由此类网站或者资源获得的任何内容、上坡或服务所产生的任何损害、损失、同惠同益不负任何直接或间接责任。任何通过使用本服务而搜索连接到的第三方视频或视频网页均系第三方提供或制作，您可能从该第三方网页上获得资讯及享用服务，同惠同益并未任何存储，中转等行为。视频内容均为第三方网站提供和在线播放，同惠同益仅仅提供视频网址链接搜索服务，故，同惠同益工作室无法对其合法性负责，亦不承担任何法律责任。</string>
    <string name="disclaimer_check">已阅读免责声明</string>
    <string name="download">HLSDownloadder</string>
    <string name="downloadStart">开始离线保存视频</string>
    <string name="downloadWait">等待下载</string>
    <string name="downloadError">下载失败</string>
    <string name="downloadPause">任务暂停</string>
    <string name="downloadComplete">下载完成</string>
    <string name="downloading">视频下载中</string>
    <string name="offline_download">离线</string>
    <string name="task_exist">该任务已存在</string>
    <string name="video_exist">该视频已存在"</string>
    <string name="begin_download">开始下载</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="choose_favorite">请选择你喜欢的栏目</string>
    <string name="nolongertip">不再提示"</string>
    <string name="video_download">离线视频</string>
    <string name="parser_download">离线缓存</string>
    <string name="parser_capture">同步到电脑</string>
    <string name="parser_play">极速播放</string>
    <string name="tag_downloading">下载中</string>
    <string name="tag_downloaded">已下载</string>
    <string name="share">分享</string>
    <string name="share_description">把加速狗分享到微信或朋友圈，即可继续使用同步功能。(你的分享是对我们最大的支持^_^)</string>
    <string name="share_description_2">如果你喜欢加速狗，希望也可以将它也介绍给朋友，你的分享是对我们最大的支持^_^</string>
    <string name="no_download_file">没有缓存视频</string>
    <string name="no_download_tips">缓存视频到本地，随时随地观看</string>
    <string name="no_collect_record">暂无收藏视频</string>
    <string name="no_collect_tips">收藏视频，便于日后观看</string>
    <string name="no_browser_record">暂无任何观看记录</string>
    <string name="wechat">微信</string>
    <string name="timeline">朋友圈</string>
    <string name="episode_selete">选择剧集</string>
    <string name="episode_sycn_pc">同步到电脑</string>
    <string name="tips">提示</string>
    <string name="catching">获取中...</string>
    <string name="choose_download_file">请选择下载文件夹</string>
    <string name="choosen_path">请手动处理旧目录视频文件,现在的路径为：</string>
    <string name="download_def_select">选择优先下载清晰度</string>
    <string name="download_def_super">超清优先</string>
    <string name="download_def_high">高清优先</string>
    <string name="download_def_normal">标清优先</string>
    <string name="episode_selection">选择播放的剧集</string>
    <string name="init_guide">初始化导航</string>
    <string name="choose_site">请选择您喜欢的视频站点</string>
    <string name="introduce">简介</string>
    <string name="episode">剧集</string>
    <string name="score_open">评分：</string>
    <string name="actor_open">主演：</string>
    <string name="area_open">地区：</string>
    <string name="year_open">年份：</string>
    <string name="episode_open">年份：</string>
    <string name="type_open">类型：</string>
    <string name="tag_name_film">电影精选</string>
    <string name="tag_name_episode">热剧追踪</string>
    <string name="tag_name_shortfilm">精彩短片</string>
    <string name="tag_name_tvlife">电视直播</string>
    <string name="tag_name_cloud_video">云视频</string>
    <string name="tag_name_cartoon">动漫</string>
    <string name="tag_name_variety">综艺</string>
    <string name="tag_name_other">其他</string>
    <string name="can_not_download_video">此视频请在播放页中离线缓存。</string>
    <string name="can_not_get_video_address">无法获取视频地址</string>
    <string name="download_not_in_wifi">目前手机网络不在WiFi状态下?是否确定下载</string>
    <string name="video_loading">视频加速中...</string>
    <string name="video_loading_magnet">视频加载中,云播大文件磁力链有效性不稳定且解析较慢，请耐心等待</string>
    <string name="next_episode">即将自动播放下一集</string>
    <string name="playing_tv">正在播放: </string>
    <string name="has_played_at">已观看至</string>
    <string name="click_more_time_exit">再点击一次退出</string>
    <string name="knowed">已经了解</string>
    <string name="android_ago_just_now">
        刚刚
    </string>
    <string name="album_title_bookmarks">
        书签
    </string>
    <string name="album_title_history">
        历史
    </string>
    <string name="album_title_home">
        首页
    </string>
    <string name="album_untitled">
        无标题
    </string>
    <string name="clear_label">
        清空
    </string>
    <string name="clear_menu_done_all">
        完成
    </string>
    <string name="clear_title_quit">
        退出时清空选择项
    </string>
    <string name="clear_title_bookmarks">
        清空书签
    </string>
    <string name="clear_title_cache">
        清空缓存
    </string>
    <string name="clear_title_cookie">
        清空Cookie
    </string>
    <string name="clear_title_form_data">
        清空表单数据
    </string>
    <string name="clear_title_history">
        清空历史
    </string>
    <string name="clear_title_passwords">
        清空密码
    </string>
    <string name="dialog_title_hint">
        输入标题
    </string>
    <string name="dialog_se_hint">
        https://www.google.com/search?q=
    </string>
    <string name="dialog_ua_hint">
        Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36
    </string>
    <string name="dialog_sign_in_username">
        用户名
    </string>
    <string name="dialog_sign_in_password">
        密码
    </string>
    <string name="dialog_button_positive">
        确认
    </string>
    <string name="dialog_button_negative">
        取消
    </string>
    <string name="dialog_button_custom">
        自定义
    </string>
    <string name="dialog_title_download">
        下载
    </string>
    <string name="dialog_title_resubmission">
        重新提交
    </string>
    <string name="dialog_title_warning">
        警告
    </string>
    <string name="dialog_title_sign_in">
        登入
    </string>
    <string name="dialog_content_resubmission">
        你想要重新提交你的数据吗？
    </string>
    <string name="dialog_content_ssl_error">
        当前站点的证书是不可信任的，需要继续浏览吗？
    </string>
    <string name="list_empty">
        当前列表为空
    </string>
    <string name="main_menu_new_tab">
        新建标签
    </string>
    <string name="main_menu_copy_link">
        拷贝链接
    </string>
    <string name="main_menu_save">
        保存
    </string>
    <string name="main_omnibox_input_hint">
        搜索视频或输入网址
    </string>
    <string name="main_relayout_ok">
        确定
    </string>
    <string name="main_about_blank">
        about:blank
    </string>
    <string name="notification_content_holder">
        点击前往浏览网页
    </string>
    <string name="readability_label">
        阅读模式
    </string>
    <string name="readability_menu_background">
        背景
    </string>
    <string name="readability_menu_share">
        分享
    </string>
    <string name="readability_empty">
        阅读模式加载失败，原因可能是网络连接问题，Readability令牌错误或者链接错误
    </string>
        <string name="dialog_content_upload">
        由于某些原因我们无法在Android 4.X中上传文件，但这项功能在Android 5.X中可以正常工作。这是多么遗憾的一件事啊！
    </string>
    <string name="search_hint">
        搜索
    </string>
    <string name="setting_label">
        设置
    </string>
    <string name="setting_title_browser">
        浏览
    </string>
    <string name="setting_title_search_engine">
        搜索引擎
    </string>
    <string name="setting_summary_search_engine_google">
        Google
    </string>
    <string name="setting_summary_search_engine_duckduckgo">
        DuckDuckGo
    </string>
    <string name="setting_summary_search_engine_startpage">
        Startpage
    </string>
    <string name="setting_summary_search_engine_bing">
        Bing
    </string>
    <string name="setting_summary_search_engine_baidu">
        Baidu
    </string>
    <string name="setting_summary_search_engine_custom">
        自定义
    </string>
    <string name="setting_title_notification_priority">
        通知栏优先级
    </string>
    <string name="setting_summary_notification_priority_default">
        默认
    </string>
    <string name="setting_summary_notification_priority_high">
        高
    </string>
    <string name="setting_summary_notification_priority_low">
        低
    </string>
    <string name="setting_title_omnibox_position">
        地址栏位置
    </string>
    <string name="setting_summary_omnibox_position_top">
        顶部
    </string>
    <string name="setting_summary_omnibox_position_bottom">
        底部
    </string>
    <string name="setting_title_omnibox_control">
        地址栏控制
    </string>
    <string name="setting_summary_omnibox_control">
        允许左右滑动地址栏切换标签页
    </string>
    <string name="setting_title_volume_control">
        音量键控制
    </string>
    <string name="setting_summary_vc_switch_tabs">
        切换标签页
    </string>
    <string name="setting_summary_vc_scroll_webpage">
        滚动网页
    </string>
    <string name="setting_summary_vc_system_default">
        系统默认
    </string>
    <string name="setting_title_images">
        图片
    </string>
    <string name="setting_summary_images">
        允许网页加载图片
    </string>
    <string name="setting_title_cookie">
        Cookie
    </string>
    <string name="setting_summary_cookie">
        允许浏览器接收Cookie
    </string>
    <string name="setting_title_javascript">
        JavaScript
    </string>
    <string name="setting_summary_javascript">
        允许浏览器运行JavaScript
    </string>
    <string name="setting_title_location">
        地理位置
    </string>
    <string name="setting_summary_location">
        允许网页获取地理位置
    </string>
    <string name="setting_title_multiple_windows">
        多标签页
    </string>
    <string name="setting_summary_multiple_windows">
        允许网页自动新建标签页
    </string>
    <string name="setting_title_scroll_bar">
        滚动条
    </string>
    <string name="setting_summary_scroll_bar">
        允许在网页中显示滚动条
    </string>
    <string name="setting_title_text_reflow">
        文本重排
    </string>
    <string name="setting_summary_text_reflow">
        允许浏览器对网页文本进行调整
    </string>
    <string name="setting_title_user_agent">
        浏览器标识
    </string>
    <string name="setting_summary_user_agent_default">
        默认
    </string>
    <string name="setting_summary_user_agent_desktop">
        桌面
    </string>
    <string name="setting_summary_user_agent_custom">
        自定义
    </string>
    <string name="setting_title_rendering">
        渲染模式
    </string>
    <string name="setting_summary_rendering_default">
        默认
    </string>
    <string name="setting_summary_rendering_grayscale">
        灰度
    </string>
</resources>