<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/download_def_select"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/nor_defini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="12dp"
        android:text="@string/download_def_normal"
        android:textColor="@drawable/tv_dialog_definition" />

    <View
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:background="#33000000" />

    <TextView
        android:id="@+id/high_defini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="12dp"
        android:text="@string/download_def_high"
        android:textColor="@drawable/tv_dialog_definition" />

    <View
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:background="#33000000" />

    <TextView
        android:id="@+id/super_defini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="12dp"
        android:text="@string/download_def_super"
        android:textColor="@drawable/tv_dialog_definition" />

</LinearLayout>
