<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleview_download_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp"
        android:scrollbars="none" />


    <LinearLayout
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <net.luna.common.view.progress.ProgressBarCircularIndeterminate
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="#dddddd" />

        <TextView
            android:id="@+id/progress_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VideoView_loading_text"
            android:textColor="#cccccc"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_no_file_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@mipmap/blankpages_img_download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/no_download_file"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_download_tips"
            android:textColor="@color/text_black_secondary"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>