<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_top_bar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleview_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/bookmark_none_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@mipmap/blankpages_img_collect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/no_collect_record"
            android:textColor="@color/text_black_secondary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_collect_tips"
            android:textColor="@color/text_secondary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_none_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@mipmap/blankpages_img_record" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/no_browser_record"
            android:textColor="@color/text_black_secondary"
            android:textSize="@dimen/text_size_16sp" />

    </LinearLayout>

</RelativeLayout>
