<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/share_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/layout_margin_4dp"
        android:background="@color/transparent"
        android:padding="@dimen/padding_4dp"
        android:src="@drawable/ic_close_web" />

    <TextView
        android:id="@+id/share_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_16dp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/share_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/share_title"
        android:paddingBottom="@dimen/padding_16dp"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp"
        android:text="@string/share_description"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/share_description"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/layout_height_32dp">

        <LinearLayout
            android:id="@+id/btn_share_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_height_32dp"
            android:background="@drawable/grid_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:src="@mipmap/share_ic_wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_4dp"
                android:text="@string/wechat"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_share_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grid_selector"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:src="@mipmap/share_ic_friend" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_4dp"
                android:text="@string/timeline"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
