<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_top_bar" />


    <LinearLayout
        android:id="@+id/layout_shell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/layout_init_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/padding_16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/init_guide"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/choose_site"
                android:textColor="@color/text_black_secondary"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/search_bar_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_shell"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/search_top_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:padding="8dp"
                android:src="@mipmap/home_nav_ic_searchbar" />

            <TextView
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:padding="8dp"
                android:text="@string/search"
                android:textColor="@drawable/tv_orange"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/btn_search"
                android:layout_toRightOf="@id/search_icon"
                android:hint="@string/video_search_hint"
                android:lines="1"
                android:textColor="#dddddd"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignRight="@id/search_edit"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:padding="4dp"
                android:src="@drawable/ic_clear" />


        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_200"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/complete"
        android:textColor="@drawable/tv_black_blue"
        android:textSize="@dimen/text_size_16sp"
        android:visibility="gone" />

    <GridView
        android:id="@+id/gridview_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_complete"
        android:layout_below="@id/search_bar_parent"
        android:layout_marginTop="@dimen/layout_margin_16dp"
        android:numColumns="4"
        android:paddingLeft="@dimen/padding_8dp"
        android:paddingRight="@dimen/padding_8dp"
        android:scrollbars="none"
        android:verticalSpacing="@dimen/layout_margin_8dp" />

    <include
        android:id="@+id/progress_dialog"
        layout="@layout/dialog_progress" />

</RelativeLayout>
